<resources>
    <string name="app_name">NOTAS</string>
    <string name="txtBuscar">Buscar</string>
    <string name="txtEjemplo">ESTO ES UNA NOTA DE EJEMPLO</string>
    <string name="txtFecha">20/10/18</string>
    <string name="cancelar">Cancelar</string>
    <string name="guardar">Guardar</string>
    <string name="titulo">Título</string>
    <string name="descripcion">Descripción</string>
    <string name="title_activity_crear_nota">CrearNota</string>
    <string name="Nota">Nota</string>
    <string name="Color">Color</string>
    <string name="imagenes">Imágenes</string>
    <string name="Mapa">Mapa</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="seleccione">Selecciona un color</string>

    <!--COLORES-->
    <string name="amarillo">Amarillo</string>
    <string name="verde">Verde</string>
    <string name="azul">Azul</string>
    <string name="naranja">Naranja</string>
    <string name="morado">Morado</string>
    <string name="rojo">Rojo</string>
    <string name="blanco">Blanco</string>
    <string name="vacio">No hay archivos adjuntos</string>
    <string name="foto">Foto</string>
    <string name="video">Vídeo</string>
    <string name="ubi">Ubicación</string>
    <string name="capturar">Capturar</string>
    <string name="tomar">Tomar foto</string>
    <string name="modificacionnota">La nota ha sido modificada correctamente</string>
    <string name="nuevaNota">La nota ha sido creada correctamente</string>

    <string name="borrar">¿Deseas borrar la nota?</string>
    <string name="aceptar">Aceptar</string>
    <string name="nopermisos">Aviso: Permisos Desactivados</string>
    <string name="nopermisos2">Debe aceptar los permisos para el correcto funcionamiento de la App</string>

    <string name="seleccioneopcion">Seleccione una opción</string>
    <string name="cargarimagen">Cargar Imagen</string>
    <string name="tomarfoto">Tomar Foto</string>




</resources>
